fix: UI improvements, broken links, metadata and Samsung dark mode

--- a/src/resources/custom.css
+++ b/src/resources/custom.css
@@ -1,3 +1,11 @@
+[data-theme="light"] {
+  color-scheme: light;
+}
+
+[data-theme="dark"] {
+  color-scheme: dark;
+}
+
 /* :root {
   /*
   /* Override default variables here */
